# sas_xport

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  precommit-check.ps1  profile.ps1  profile.sh
.github/workflows/: rust.yml
benches/: read_records.rs
examples/: profile.rs  profile_report.rs
src/: lib.rs
src/ibm/: ibm_float_64.rs  mod.rs
src/sas/: mod.rs  sas_date_time.rs  sas_error.rs  sas_float_64.rs  sas_justification.rs  sas_missing_value.rs  sas_month.rs  sas_variable_type.rs
src/sas/xport/: async_xport_buffer.rs  async_xport_dataset.rs  async_xport_reader.rs  async_xport_writer.rs  async_xport_writer_state.rs  async_xport_writer_with_metadata.rs  async_xport_writer_with_schema.rs  converter.rs  cursor.rs  decoder.rs  find_record_outcome.rs  lazy_xport_record.rs  mod.rs  truncation_policy.rs  xport_buffer.rs  xport_buffer_state.rs  xport_constants.rs  xport_dataset.rs  xport_dataset_state.rs  xport_dataset_version.rs  xport_error.rs  xport_file_version.rs  xport_metadata.rs  xport_reader.rs  xport_reader_options.rs  xport_record.rs  xport_record_iterator.rs  xport_schema.rs  xport_value.rs  xport_variable.rs  xport_variable_extension_lengths.rs  xport_writer.rs  xport_writer_options.rs  xport_writer_state.rs  xport_writer_with_metadata.rs  xport_writer_with_schema.rs
tests/: async_xport_reader_test.rs  async_xport_writer_test.rs  xport_reader_test.rs  xport_writer_test.rs
tests/resources/multi/: multiple-datasets-empty.xpt
tests/resources/v5/: ae.xpt
tests/resources/v9/: adsl.xpt
